[tool.poetry]
name = "fletlearn"
version = "0.1.0"
description = "Chrono is an amazing todo + tracking app that is going to surpass Jira in a few thousand years."
authors = ["meliodas0n <mrunalnarayana@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
